--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
                         <div class="main-user-info">
                             <div class="user_img">
-                                <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg" class="rounded-circle"
-                                    alt="Imagen Perfil">
+                                <img src="./assets/img/maria.jpg" class="rounded-circle" alt="Imagen Perfil">
                             </div>
                             <div class="user_name">
                                 <div><b>Maria</b></div>
